Ajusta as imagens dos produtos e melhora a responsividade
- Adição de descrição e imagens responsiva mock de produtos
- Ajuste de responsividade dos cards no catálogo
- Ajuste de bloqueio de checkout se o carrinho estiver vazio

--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
             </div>
 
             <div class="nav-right">
-                <!-- Caixa de busca -->
                 <input type="text" id="busca" placeholder="Buscar produto...">
 
-                <!-- Filtro por categoria -->
                 <select id="filtroCategoria">
                     <option value="">Todas as categorias</option>
                 </select>
 
-                <!-- Ordenação -->
                 <select id="ordenar">
                     <option value="">Ordenar</option>
                     <option value="preco-asc">Preço ↑</option>
@@ -32,12 +29,12 @@
                     <option value="nome-desc">Nome Z-A</option>
                 </select>
 
-                <!-- Botão do carrinho com ícone -->
                 <a href="carrinho.html" class="botao-carrinho">🛒</a>
             </div>
         </nav>
     </header>
 
+    <!-- grid centralizado -->
     <main id="catalogo"></main>
 
     <!-- Modal de Detalhe do Produto -->
