--- a/checkout.html
+++ b/checkout.html
@@ -7,12 +7,14 @@
     <title>Checkout - E-commerce Fotografia</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/icons/favicon-32x32.png" />
     <link rel="stylesheet" href="css/checkout.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
     <header>
         <h1>Checkout</h1>
-        <nav>
+        <nav class="nav">
+            <a href="index.html">Página Inicial</a>
             <a href="carrinho.html">Voltar ao carrinho</a>
         </nav>
     </header>
@@ -59,6 +61,7 @@
         </form>
     </main>
     <script src="js/checkout.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 
 </html>
