--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FotoShop</title>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/icons/favicon-32x32.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/icons/favicon-32x32.png" />
     <link rel="stylesheet" href="css/catalogo.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
+
 <body>
     <header>
         <nav class="nav-top">
             <div class="nav-left">
-                <h1>FotoShop</h1>
+                <h1>
+                    <a href="index.html">FotoShop</a>
+                </h1>
+            </div>
+
+            <div class="nav-center">
+                <input type="text" id="busca" placeholder="Buscar produtos, marcas e muito mais...">
             </div>
 
             <div class="nav-right">
-                <input type="text" id="busca" placeholder="Buscar produto...">
 
-                <select id="filtroCategoria">
-                    <option value="">Todas as categorias</option>
-                </select>
-
-                <select id="ordenar">
-                    <option value="">Ordenar</option>
-                    <option value="preco-asc">Preço ↑</option>
-                    <option value="preco-desc">Preço ↓</option>
-                    <option value="nome-asc">Nome A-Z</option>
-                    <option value="nome-desc">Nome Z-A</option>
-                </select>
 
                 <a href="carrinho.html" class="botao-carrinho">🛒</a>
             </div>
@@ -35,7 +32,24 @@
     </header>
 
     <!-- grid centralizado -->
-    <main id="catalogo"></main>
+    <main class="container">
+        <div class="filtros">
+            <select id="filtroCategoria">
+                <option value="">Todas as categorias</option>
+            </select>
+
+            <select id="ordenar">
+                <option value="">Ordenar</option>
+                <option value="preco-asc">Preço ↑</option>
+                <option value="preco-desc">Preço ↓</option>
+                <option value="nome-asc">Nome A-Z</option>
+                <option value="nome-desc">Nome Z-A</option>
+            </select>
+        </div>
+        <div id="catalogo">
+            <!-- Cards de produtos serão inseridos aqui via JavaScript -->
+        </div>
+    </main>
 
     <!-- Modal de Detalhe do Produto -->
     <div id="modalProduto" class="modal">
@@ -53,5 +67,7 @@
     </div>
 
     <script src="js/catalogo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
+
 </html>
