--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/icons/favicon-32x32.png" />
     <link rel="stylesheet" href="css/catalogo.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 
 <body>
@@ -24,9 +26,10 @@
             </div>
 
             <div class="nav-right">
-
-
-                <a href="carrinho.html" class="botao-carrinho">🛒</a>
+                <a href="carrinho.html" class="botao-carrinho">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <span id="cartCount" class="cart-count">0</span>
+                </a>
             </div>
         </nav>
     </header>
