Altera o layout da lista de itens no carrinho
- Ajuste rápido na navbar da tela inicial
- Correção dos botões de incremento/decremento no carrinho

--- a/carrinho.html
+++ b/carrinho.html
@@ -18,13 +18,13 @@
         </a>
 
         <!-- Lista de itens -->
-        <div id="itensCarrinho"></div>
+        <div class="container" id="itensCarrinho"></div>
 
-        <p>Total: R$ <span id="totalCarrinho">0.00</span></p>
+        <p class="total">Total: R$ <span id="totalCarrinho">0.00</span></p>
 
         <!-- Botão para finalizar compra -->
         <a href="checkout.html">
-            <button class="finalizar">Ir para Checkout</button>
+            <button class="finalizar">Finalizar</button>
         </a>
     </main>
 
