Adiciona o botão de carrinho no card e altera as cores principais
- Adição do botão "adicionar ao carrinho" direto no card que antes só existia dentro do modal;
- Mudança estética nas cores do site;
- Adição do footer na página principal.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
             <select id="ordenar">
                 <option value="">Ordenar</option>
-                <option value="preco-asc">Preço ↑</option>
-                <option value="preco-desc">Preço ↓</option>
+                <option value="preco-asc">Menor Preço</option>
+                <option value="preco-desc">Maior Preço</option>
                 <option value="nome-asc">Nome A-Z</option>
                 <option value="nome-desc">Nome Z-A</option>
             </select>
@@ -72,5 +72,20 @@
     <script src="js/catalogo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
+
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-info">
+            <p>© 2025 Minha Loja – Todos os direitos reservados.</p>
+            <p>Endereço fictício, 123 – Cidade/UF</p>
+        </div>
+
+        <div class="footer-social">
+            <a href="#" class="social-link">Instagram</a>
+            <a href="#" class="social-link">Facebook</a>
+            <a href="#" class="social-link">Twitter</a>
+        </div>
+    </div>
+</footer>
 
 </html>
